Prevent the top app bar from overflowing

--- a/assets/stylesheets/nuclearnode/app.styl
+++ b/assets/stylesheets/nuclearnode/app.styl
@@ -43,6 +43,10 @@ body
       padding 0 0.5em
       display inline-block
 
+      overflow hidden
+      text-overflow ellipsis
+      white-space nowrap
+
       .AppTitle
         font inherit
         color inherit
